# orbitprofiler

./: CMakeLists.txt  bootstrap-orbit.ps1  bootstrap-orbit.sh  build.ps1  build.sh  conanfile.py
ElfUtils/: CMakeLists.txt
ItemModels/: CMakeLists.txt  PresetItemModel.cpp  ProcessItemModel.cpp
ItemModels/include/ItemModels/: PresetItemModel.h  ProcessItemModel.h  Update.h
OrbitBase/: CMakeLists.txt
OrbitCore/: CMakeLists.txt  OrbitSession.h
OrbitFramePointerValidator/: CMakeLists.txt
OrbitGl/: App.cpp  App.h  CMakeLists.txt  CallStackDataView.cpp  DataViewTypes.h  FunctionsDataView.cpp  LiveFunctionsDataView.cpp  SamplingReportDataView.cpp
OrbitLinuxTracing/: CMakeLists.txt
OrbitQt/: CMakeLists.txt  CodeViewTest.cpp  main.cpp  orbitlivefunctions.cpp  orbitlivefunctions.h  orbitmainwindow.cpp  orbitmainwindow.h  orbitmainwindow.ui  orbittreeview.cpp  orbittreeview.h
OrbitSshQt/: CMakeLists.txt
WebUI/src/: CodeView.css  Heatmap.ts
Widgets/: CMakeLists.txt  FilterBarTableViewWidget.cpp  FilterBarTableViewWidget.ui
Widgets/include/Widgets/: FilterBarTableViewWidget.h
cmake/: tests.cmake
src/CodeViewer/: Dialog.cpp  Dialog.ui  Viewer.cpp  ViewerTest.cpp
src/CodeViewerDemo/: main.cpp
src/ConfigWidgets/: CMakeLists.txt  SourcePathsMappingDialog.cpp
src/ElfUtils/: ElfFile.cpp
src/OrbitBase/: AnyInvocableTest.cpp  AnyMovableTest.cpp  CMakeLists.txt  ImmediateExecutorTest.cpp
src/OrbitGl/: App.cpp  CaptureWindow.cpp  MainThreadExecutor.h  PickingManager.cpp  PickingManager.h  ScopedStatus.h  SourceCodeReport.cpp  SourceCodeReport.h
(+16 files in other folders)
